# cybathlon_launchers

./: CMakeLists.txt  package.xml
launch/: calibration_wheel.launch  cybathlon_control_F1.launch  cybathlon_control_p.launch  cybathlon_full_f1.launch  cybathlon_game.yaml  cybathlon_game_launcher.launch  cybathlon_wheel.launch  evaluation_wheel.launch  gdffile_integrator.launch  gtec.launch  gtec_prova.launch  neuroviz.launch
launch/old/: gdffile.launch  keyboard.launch
