<?xml version="1.0"?>
<package format="2">
  <name>cybathlon_launchers</name>
  <version>0.0.0</version>
  <description>The cybathlon_launchers package</description>

  <maintainer email="luca.tonin@unipd.it">Luca Tonin</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
